--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,11 @@ edition = "2021"
 [dependencies.dashmap]
 version = "5.5.3"
 
+[dependencies.futures]
+version = "0.3.30"
+
 [dependencies.steamgear-sys]
 path = "./steamgear-sys"
+
+[dependencies.parking_lot]
+version = "0.12.3"
