--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,11 +3,11 @@ name = "steamgear"
 version = "0.1.0"
 edition = "2021"
 
-[dependencies.async-channel]
-version = "2.3.1"
-
 [dependencies.dashmap]
 version = "5.5.3"
+
+[dependencies.futures]
+version = "0.3.30"
 
 [dependencies.futures-core]
 version = "0.3.30"
@@ -17,6 +17,9 @@ version = "0.12.3"
 
 [dependencies.steamgear-sys]
 path = "./steamgear-sys"
+
+[dependencies.thiserror]
+version = "1.0.61"
 
 [dev-dependencies.smol]
 version = "2.0.0"
