Added some api for steam apps

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "steamgear"
 version = "0.1.0"
 edition = "2021"
 
+[dependencies.chrono]
+version = "0.4.38"
+
 [dependencies.dashmap]
 version = "5.5.3"
 
